<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <TextView
        android:id="@+id/portal_view_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/label_z"
        app:layout_constraintStart_toEndOf="@+id/label_x"
        app:layout_constraintTop_toTopOf="@+id/label_z" />

    <TextView
        android:id="@+id/portal_view_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAlignment="inherit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/label_x"
        app:layout_constraintStart_toEndOf="@+id/label_z"
        app:layout_constraintTop_toTopOf="@+id/label_x" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:onClick="gotoMain"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portal_view_z" />

    <TextView
        android:id="@+id/label_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/z_equals"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label_z"
        app:layout_constraintTop_toBottomOf="@+id/label_z" />

    <TextView
        android:id="@+id/label_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/x_equals"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/stronghold_header"
        app:layout_constraintTop_toBottomOf="@+id/stronghold_header" />

    <TextView
        android:id="@+id/stronghold_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stronghold_coordinates"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>